// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`config > getConfig default 1`] = `
{
  "disabled": false,
  "exclude": [
    /node_modules/i,
  ],
  "mediaQuery": {
    "query": "(min-width: 400px)",
    "scale": 0.5,
  },
  "propList": [
    "font",
    "font-size",
    "line-height",
    "letter-spacing",
  ],
  "selectorBlackList": [],
  "transformUnit": "px",
  "unitPrecision": 5,
}
`;

exports[`config > getConfig with wild prop 1`] = `
{
  "disabled": false,
  "exclude": [
    /node_modules/i,
  ],
  "mediaQuery": [
    {
      "query": "(min-width: 400px)",
      "scale": 0.5,
    },
    {
      "query": "(max-width: 200px)",
      "scale": 2,
    },
  ],
  "propList": [
    "*",
  ],
  "selectorBlackList": [],
  "transformUnit": "px",
  "unitPrecision": 5,
}
`;
